# SQUIC_Pkg_Python

./: .gitignore  README.md  SQUIC_Py.py  SQUIC_Python.py  setup.cfg  squic_test.py  test.py
python_package/: README.md  setup.cfg
python_package/src/SQUIC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_package/src/pySQUIC/: SQUIC_Python.py
python_package/src/pySQUIC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_package/src/pySQUIC/test/: test_squic.py
src/SQUIC/: SQUIC_Python.py  __init__.py
src/SQUIC_Python/: SQUIC_Python.py  __init__.py
src/SQUIC_Python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/SQUIC_Python/test/: test_squic.py
src/SQUICpy/: SQUIC_Python.py  __init__.py
src/SQUICpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/SQUICpy/test/: test_squic.py
testing/: __init__.py  test_squic.py
