[metadata]
name = SQUIC_Python
version = 0.0.3
author = Aryan Eftekhari, Lisa Gaedke-Merzhaeuser, Dimosthenis Pasadakis, Matthias Bollhoefer, Simon Scheidegger, Olaf Schenk
author_email = author@example.com
description = Sparse Quadratic Inverse Covariance Estimation
description-file = README.md
long_description_content_type = text/markdown
url = https://github.com/aefty/SQUIC_Python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src