[metadata]
name = SQUIC_Python
version = 0.3.4
author = Aryan Eftekhari, Lisa Gaedke-Merzhaeuser, Dimosthenis Pasadakis, Matthias Bollhoefer, Simon Scheidegger, Olaf Schenk
description = Sparse Quadratic Inverse Covariance Estimation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aefty/SQUIC_Python
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    License :: OSI Approved :: GNU General Public License (GPL)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src